<resources>
    <string name="app_name">FilmsApp</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_the_film">About the film</string>
    <string name="year_of_production">Year of production</string>
    <string name="country">Country</string>
    <string name="genre">Genre</string>
    <string name="director">Director</string>
    <string name="more_detailed">More detailed</string>
    <string name="review">Review</string>
    <string name="slogan">Slogan</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="movies">Movies</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="language">Application language</string>
    <string name="theme_app">Dark theme</string>
    <string name="theme_system_app">System theme</string>
    <string name="night">dark</string>
    <string name="light">light</string>
    <string name="system">system</string>
</resources>