<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context=".fragments.MovieFragment"
    tools:ignore="UselessParent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/favorite"
            app:layout_constraintEnd_toEndOf="@+id/favorite"
            app:layout_constraintStart_toStartOf="@+id/favorite"
            app:layout_constraintTop_toTopOf="@+id/favorite"
            app:lottie_autoPlay="false"
            app:lottie_loop="false"
            app:lottie_scale="0.09"
            app:lottie_rawRes="@raw/heart" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/favorite"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/icon_favorite"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/image_movie"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/image_movie"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/about_the_film"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_movie" />

        <TextView
            android:id="@+id/year_of_production"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/year_of_production"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="Title"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="HardcodedText,SmallSp" />

        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/country"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/year_of_production"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/genre"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/country"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/director"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/director_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/director_text"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/review"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/review_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/review_text"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/roboto"
            android:text="@string/slogan"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/slogan_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/slogan_text"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/more_detailed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/more_detailed"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/director_text" />

        <TextView
            android:id="@+id/year_of_production_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/year_of_production"
            app:layout_constraintStart_toEndOf="@+id/year_of_production"
            app:layout_constraintTop_toTopOf="@+id/year_of_production"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/title"
            app:layout_constraintStart_toEndOf="@+id/year_of_production"
            app:layout_constraintTop_toTopOf="@+id/title"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/country_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/country"
            app:layout_constraintStart_toStartOf="@+id/year_of_production_text"
            app:layout_constraintTop_toTopOf="@+id/country"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/genre_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/genre"
            app:layout_constraintStart_toStartOf="@+id/country_text"
            app:layout_constraintTop_toTopOf="@+id/genre"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/director_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/genre_text"
            app:layout_constraintTop_toBottomOf="@+id/genre_text"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/review_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/director_text"
            app:layout_constraintTop_toBottomOf="@+id/more_detailed"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/slogan_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="65dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/review_text"
            app:layout_constraintTop_toBottomOf="@+id/review_text"
            tools:ignore="SmallSp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>